<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.activities.RegisterAnimalsActivity">

    <!--EditTexts-->

    <EditText
        android:id="@+id/animal_name"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/boxes_register"
        android:padding="16dp"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@color/corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBar" />

    <EditText
        android:id="@+id/animal_link"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/boxes_register"
        android:padding="16dp"
        android:hint="@string/link_img"
        android:textColor="@color/corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_name" />

    <EditText
        android:id="@+id/animal_description_reg"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/boxes_register"
        android:padding="16dp"
        android:inputType="text"
        android:hint="@string/description"
        android:textColor="@color/corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_link" />

    <EditText
        android:id="@+id/animal_specie"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/boxes_register"
        android:padding="16dp"
        android:inputType="text"
        android:hint="@string/specie"
        android:textColor="@color/corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_description_reg" />

    <EditText
        android:id="@+id/animal_age"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/boxes_register"
        android:padding="16dp"
        android:inputType="number"
        android:hint="@string/age"
        android:textColor="@color/corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_specie" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/boxes_register"
        android:hint="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:backgroundTint="#7331F9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_age" />
    <!--Toolbars::: -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIconTint="@color/toolbar_color"
            app:title="Cadastrar"
            app:titleCentered="true"
            app:titleTextColor="@color/toolbar_color" />
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>